changed hero section to inner view height to prevent jumping

--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -2,17 +2,18 @@ html {
   --vh: 1vh;
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
   html {
     --vh: calc(100dvh / 100);
   }
-}
+} */
 
 .hero-section {
     position: relative;
     width: 100%;
     /* height: 100vh; */
-    height: 100dvh;
+    /* height: 100dvh; */
+    height: calc(var(--vh) * 100);
     display: flex;
     flex-direction: column;
     align-items: center;
